# lazycompass

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  PLAYGROUND.md  PRE_V1_HARDENING.md  QUERY_FORMAT.md  README.md  RELEASE.md  SECURITY.md  SECURITY_REVIEW.md  SPEC.md  SUPPORT.md  VERSIONING.md  install.sh  lefthook.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
.lazycompass/: config.toml
.lazycompass/aggregations/: lazycompass.orders.orders_by_user.json  orders_by_user.toml
.lazycompass/queries/: active_users.toml  lazycompass.orders.recent_orders.json  lazycompass.users.active_users.json  lazycompass.users.engineer-role.json  recent_orders.toml
assets/readme/: README.md
dev/mongodb/: docker-compose.yml
dev/mongodb/init/: 01-seed.js
keys/: lazycompass-release-signing.asc
lazycompass-cli/: Cargo.toml
lazycompass-cli/src/: app.rs  cli.rs  editor.rs  errors.rs  logging.rs  main.rs  output.rs
lazycompass-cli/src/commands/: agg.rs  config.rs  database.rs  indexes.rs  init.rs  insert.rs  mod.rs  query.rs  update.rs  upgrade.rs
lazycompass-core/: Cargo.toml
lazycompass-core/src/: lib.rs
lazycompass-mongo/: Cargo.toml
lazycompass-mongo/src/: lib.rs
lazycompass-mongo/tests/: playground.rs
lazycompass-output/: Cargo.toml
lazycompass-output/src/: lib.rs
lazycompass-storage/: Cargo.toml
lazycompass-storage/src/: config.rs  connections.rs  lib.rs  paths.rs  saved_aggregations.rs  saved_common.rs  saved_queries.rs  security.rs  snapshot.rs  test_support.rs
lazycompass-tui/: Cargo.toml
lazycompass-tui/src/: actions.rs  app_loop.rs  clipboard.rs  editor.rs  errors.rs  formatting.rs  keymap.rs  lib.rs  loading.rs  main.rs  navigation.rs  payloads.rs  render.rs  terminal.rs  theme.rs
skills/lazycompass-operator/: SKILL.md
skills/lazycompass-operator/agents/: openai.yaml
skills/lazycompass-operator/references/: lazycompass-reference.md
