[workspace]
resolver = "2"
members = [
  "lazycompass-cli",
  "lazycompass-tui",
  "lazycompass-core",
  "lazycompass-storage",
  "lazycompass-mongo",
]

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
dotenvy = "0.15.7"
futures = "0.3.31"
mongodb = "3.5.1"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
tracing = { version = "0.1.44", features = ["max_level_debug", "release_max_level_debug"] }
tracing-subscriber = "0.3.20"
