[package]
name = "lazycompass"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
lazycompass-core = { path = "../lazycompass-core" }
lazycompass-mongo = { path = "../lazycompass-mongo" }
lazycompass-storage = { path = "../lazycompass-storage" }
lazycompass-tui = { path = "../lazycompass-tui" }
serde_json = { workspace = true }
tokio = { workspace = true }
