[package]
name = "lazycompass"
version = "0.9.6"
edition = "2024"
license = "MIT"
description = "Fast, vim-first MongoDB client for the terminal"
repository = "https://github.com/lucasscarioca/lazycompass"
homepage = "https://github.com/lucasscarioca/lazycompass"
documentation = "https://github.com/lucasscarioca/lazycompass#readme"
readme = "../README.md"
keywords = ["mongodb", "tui", "cli", "terminal"]
categories = ["command-line-utilities", "database"]
rust-version = "1.85"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
lazycompass-core = { path = "../lazycompass-core" }
lazycompass-mongo = { path = "../lazycompass-mongo" }
lazycompass-output = { path = "../lazycompass-output" }
lazycompass-storage = { path = "../lazycompass-storage" }
lazycompass-tui = { path = "../lazycompass-tui" }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
