[package]
name = "lazycompass-core"
version = "0.11.2"
edition = "2024"
license = "MIT"
description = "Shared domain types for LazyCompass"
repository = "https://github.com/lucasscarioca/lazycompass"
homepage = "https://github.com/lucasscarioca/lazycompass"
readme = "../README.md"
rust-version = "1.85"
publish = false

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
