[package]
name = "lazycompass-mongo"
version = "0.5.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
mongodb = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
lazycompass-core = { path = "../lazycompass-core" }
