[package]
name = "lazycompass-mongo"
version = "0.11.4"
edition = "2024"
license = "MIT"
description = "MongoDB execution layer for LazyCompass"
repository = "https://github.com/lucasscarioca/lazycompass"
homepage = "https://github.com/lucasscarioca/lazycompass"
readme = "../README.md"
rust-version = "1.85"
publish = false

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
mongodb = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
lazycompass-core = { path = "../lazycompass-core" }
