[package]
name = "lazycompass-output"
version = "0.11.5"
edition = "2024"
license = "MIT"
description = "Shared output rendering for LazyCompass"
repository = "https://github.com/lucasscarioca/lazycompass"
homepage = "https://github.com/lucasscarioca/lazycompass"
readme = "../README.md"
rust-version = "1.85"
publish = false

[dependencies]
anyhow = { workspace = true }
lazycompass-core = { path = "../lazycompass-core" }
lazycompass-mongo = { path = "../lazycompass-mongo" }
lazycompass-storage = { path = "../lazycompass-storage" }
serde_json = { workspace = true }
