[package]
name = "lazycompass-storage"
version = "0.6.1"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
lazycompass-core = { path = "../lazycompass-core" }
