[package]
name = "lazycompass-storage"
version = "0.9.0"
edition = "2024"
license = "MIT"
description = "Config paths and persistence for LazyCompass"
repository = "https://github.com/lucasscarioca/lazycompass"
homepage = "https://github.com/lucasscarioca/lazycompass"
readme = "../README.md"
rust-version = "1.85"
publish = false

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
lazycompass-core = { path = "../lazycompass-core" }
