[package]
name = "lazycompass-tui"
version = "0.6.1"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
lazycompass-core = { path = "../lazycompass-core" }
lazycompass-mongo = { path = "../lazycompass-mongo" }
lazycompass-output = { path = "../lazycompass-output" }
lazycompass-storage = { path = "../lazycompass-storage" }
crossterm = { workspace = true }
ratatui = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
