[package]
name = "lazycompass-tui"
version = "0.11.3"
edition = "2024"
license = "MIT"
description = "Terminal UI for LazyCompass"
repository = "https://github.com/lucasscarioca/lazycompass"
homepage = "https://github.com/lucasscarioca/lazycompass"
readme = "../README.md"
rust-version = "1.85"
publish = false

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
lazycompass-core = { path = "../lazycompass-core" }
lazycompass-mongo = { path = "../lazycompass-mongo" }
lazycompass-output = { path = "../lazycompass-output" }
lazycompass-storage = { path = "../lazycompass-storage" }
crossterm = { workspace = true }
ratatui = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
